# bones-quest

./: .gitignore  Cargo.toml  README.md  Vagrantfile
hooks/: pre-commit
resources/dialogs/: blood.toml
resources/enemies/: example.lua
src/: flags.rs  input.rs  main.rs  main_state.rs  ring_buffer.rs  scene.rs  scene_stack.rs  visual-novel.rs  visual_novel.rs
src/engine/: color.rs  draw_cache.rs  input.rs  lua.rs  main_state.rs  mod.rs  punch.rs  scene.rs  scene_stack.rs  scenes.rs  ui.rs
src/engine/input/: mod.rs  ring_buffer.rs
src/engine/punch/: enemy.rs  mod.rs  player.rs  scene.rs  scripting.rs
src/engine/scenes/: mod.rs  visual_novel.rs
src/engine/visual_novel/: command.rs  scene.rs
src/game/: flags.rs  input.rs  input_queue.rs  main_state.rs  mod.rs  ring_buffer.rs  scenes.rs
src/game/enemies/: example.lua
src/game/input/: input.rs  mod.rs  ring_buffer.rs
src/game/scenes/: mod.rs  visual_novel.rs
src/util/lua/: extend.lua  is-plain-table.lua
src/visual_novel/: command.rs  mod.rs  scene.rs
