[package]
name = "bones-quest"
version = "0.1.0"
authors = ["Nicholas Farley <nicholasafarley@gmail.com>", "Eric Bronner <erbronne@gmail.com>"]
publish = false

[dependencies]
ggez = { version = "0.4.4", features = ["cargo-resource-root"] }
toml = "0.4.6"
serde_derive = "1.0.76"
serde = "1.0.76"
regex = "1.0.4"
queues = "1.0.2"
rlua = "0.14.2"
